# maskfusion_cpp

./: CMakeLists.txt  MaskFusion_cpp.kdev4  README.md  build.sh  class_colour_scheme.data
caffe_semanticfusion/: CMakeLists.txt
caffe_semanticfusion/cmake/: Cuda.cmake  Dependencies.cmake
caffe_semanticfusion/include/caffe/: blob.hpp  net.hpp  solver.hpp
caffe_semanticfusion/include/caffe/layers/: bn_layer.hpp  unpooling_layer.hpp
caffe_semanticfusion/src/caffe/: CMakeLists.txt  net.cpp  solver.cpp
caffe_semanticfusion/src/caffe/layers/: bn_layer.cpp  bn_layer.cu  unpooling_layer.cpp  unpooling_layer.cu
caffe_semanticfusion/src/caffe/proto/: caffe.proto
caffe_semanticfusion/src/caffe/solvers/: sgd_solver.cpp
caffe_semanticfusion/src/caffe/test/: test_gradient_based_solver.cpp  test_upgrade_proto.cpp
docker/: Dockerfile
elasticfusionpublic/Core/src/: ElasticFusion.cpp  ElasticFusion.h  GPUTexture.cpp  GPUTexture.h  GlobalModel.cpp  GlobalModel.h  IndexMap.cpp  IndexMap.h
elasticfusionpublic/Core/src/Shaders/: copy_unstable.geom  copy_unstable.vert  draw_global_surface.geom  draw_global_surface.vert  surfel_ids.geom  surfel_ids.vert
elasticfusionpublic/Core/src/Utils/: GPUConfig.h
elasticfusionpublic/GUI/src/: MainController.cpp
elasticfusionpublic/GUI/src/Tools/: GUI.h
mask_rcnn_pytorch/: CMakeLists.txt  classifier.cpp  cocodataset.cpp  demo.cpp  detectiontargetlayer.cpp  fpn.cpp  imageutils.cpp  inference.cpp  inference.h  mask_rcnn_pytorch.kdev4  maskrcnn.cpp  maskrcnn.h  modelprepare.cpp  modelprepare.h  rpn.cpp  visualize.cpp  visualize.h
mask_rcnn_pytorch/.kdev4/: mask_rcnn_pytorch.kdev4
src/: main.cpp
src/cnn_interface/: CaffeInterface.cpp
src/gui/: Gui.cpp  Gui.h
src/map_interface/: ElasticFusionInterface.cpp  ElasticFusionInterface.h
src/semantic_fusion/: SemanticFusionCuda.cu  SemanticFusionCuda.h  SemanticFusionInterface.cpp  SemanticFusionInterface.h
